# Rippr

./: .gitignore  LICENSE  Open-Rippr-Admin-PowerShell-Only.cmd  Open-Rippr-Admin-PowerShell.cmd  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  REQUIREMENTS.md
helper/: Cargo.toml
helper/src/: downloader.rs  error.rs  main.rs  models.rs  platform.rs  server.rs  store.rs
plugin/: index.html  package.json  tsconfig.json  vite.config.ts
plugin/public/: index.html  manifest.json
plugin/public/fonts/: Oxanium-LICENSE.txt
plugin/src/: app.ts  main.ts  styles.css
plugin/src/services/: helper-client.ts  premiere.ts
plugin/src/types/: host.d.ts
plugin/src/utils/: clone-json.ts  format.ts
scripts/: build-native.ps1  build-native.sh  build-windows-installer.ps1  install-rippr.ps1  open-rippr-admin-powershell-only.ps1  open-rippr-admin-powershell.ps1  stage-package.mjs  test-rippr.command  test-rippr.ps1  uninstall-rippr.cmd  uninstall-rippr.ps1
shared/: package.json  protocol.schema.json  tsconfig.json
shared/src/: index.ts
